2009-02-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.ExternalTools/ExternalToolPanel.cs:
	* MonoDevelop.Ide.Commands/CustomStringTagProvider.cs: fixed
	  'Bug 474094 - External Tools initial directory does not
	  work'.

2009-02-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.StandardHeader/StandardHeaderPolicyPanel.cs:
	  Don't let the text be null, as this breaks the serialiser.
	  Fixes "Bug 473754 - In the solution policy, if the license
	  field is empty, you cannot change save changes".

2009-02-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/IdeStartup.cs:
	* MonoDevelop.Ide.Commands/FileCommands.cs:
	* MonoDevelop.Ide.Gui/DocumentNavigationPoint.cs:
	* MonoDevelop.Ide.Gui.Pads.ClassPad/NamespaceData.cs:
	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs:
	  Properly fix warning.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.csproj: Don't local-copy other addins' dlls.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* BuildVariables.cs: Include in svn so that autotools isn't
	  required to build MD.

2009-02-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Ide.cs:
	* MonoDevelop.Ide/Services.cs:
	* MonoDevelop.Ide.Gui/HelpViewer.cs:
	* MonoDevelop.Ide.Gui/IdeStartup.cs:
	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs:
	* MonoDevelop.Ide.Gui/ProjectOperations.cs:
	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs:
	* MonoDevelop.Ide.Commands/FileCommands.cs:
	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs:
	* MonoDevelop.Ide.Gui/DocumentNavigationPoint.cs:
	* MonoDevelop.Ide.Gui/NavigationHistoryService.cs:
	* MonoDevelop.Ide.Gui.Dialogs/CommonAboutDialog.cs:
	* MonoDevelop.Ide.Gui.Pads.ClassPad/NamespaceData.cs:
	* MonoDevelop.Ide.Gui.Pads.ClassPad/ProjectNodeBuilder.cs:
	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs:
	  Fixed compiler warnings.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>
